# docushield-backend

./: README.md  main.py  pyproject.toml  routes.py
aop/: audit_log.py  require_role.py
auth/: auth_bearer.py  auth_service.py
config/: database.py
config/constants/: errors.py  keys.py  urls.py
controller/: access_controller.py  auth_controller.py  user_controller.py
documentation/: database_design.md  requirement.md
exceptions/: object_not_found.py  public_key_not_found.py  token_creation.py
model/: access_history_response.py  access_status_response.py  auth_response.py  document.py  document_response.py  document_upload_request.py  grant_access_request.py  pending_access_response.py  request_access_payload.py  sign_up_request.py
repository/: access_request_repository.py  access_request_repository_impl.py  audit_log_repository.py  audit_log_repository_impl.py  auth_log_repository.py  auth_log_repository_impl.py  auth_token_repository.py  auth_token_repository_impl.py  document_repository.py  document_repository_impl.py  encryption_key_store_repository.py  encryption_key_store_repository_impl.py  user_repository.py  user_repository_impl.py
schema/: access_request_schema.py  audit_log_schema.py  auth_logs_schema.py  auth_token_schema.py  document_schema.py  encryption_key_store_schema.py  user_schema.py
service/: access_service.py  document_service.py  user_service.py
util/: enums.py  logger.py  utils.py
