[tool.poetry]
name = "docushield-backend"
version = "0.1.0"
description = ""
authors = ["NefariousNiru <nirupomboseroy99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
pydantic = "^2.10.6"
alembic = "^1.15.1"
asyncpg = "^0.30.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
passlib = "^1.7.4"
pyjwt = "==2.10.1"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
